# MalAware

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  ParseOutput.txt  ParseResults.txt  README.md  SAMPLE_OUTPUT.md  SECURITY.md  main.cpp  main_new.cpp  peFileParserModular  peFileParser_modular  remove_comments.py  sampleOutput.md  test_suite.sh
include/: AdvancedEntropyAnalyzer.h  CryptoUtils.h  EnhancedOutputManager.h  FuzzyHashCalculator.h  JSONOutputManager.h  OutputManager.h  PEDebugInfoAnalyzer.h  PEDigitalSignatureAnalyzer.h  PEHashCalculator.h  PEMalwareAnalysisEngine.h  PEParser.h  PERelocationParser.h  PEResourceParser.h  PESecurityAnalyzer.h  PESuspiciousTechniqueAnalyzer.h  PETLSAnalyzer.h  PETLSAnalyzer_new.h  PEThreatIntelligence.h  PKCS7Parser.h  PerformanceMetrics.h  errorBoundsChecker.h  outputCapture.h  peCommon.h  peFileHandler.h  peHeaderParser.h  peImportExport.h  peParser.h  peSectionParser.h  pe_common.h  pe_file_handler.h  pe_header_parser.h  pe_import_export.h  pe_parser.h  pe_section_parser.h
src/: AdvancedEntropyAnalyzer.cpp  CryptoUtils.cpp  EnhancedOutputManager.cpp  FuzzyHashCalculator.cpp  JSONOutputManager.cpp  Logger.cpp  OutputManager.cpp  PEDebugInfoAnalyzer.cpp  PEDigitalSignatureAnalyzer.cpp  PEHashCalculator.cpp  PEMalwareAnalysisEngine.cpp  PEParser.cpp  PERelocationParser.cpp  PEResourceParser.cpp  PESecurityAnalyzer.cpp  PESuspiciousTechniqueAnalyzer.cpp  PETLSAnalyzer.cpp  PKCS7Parser.cpp  PerformanceMetrics.cpp  peCommon.cpp  peFileHandler.cpp  peHeaderParser.cpp  peParser.cpp  (+7 more)
